--- a/Sources/Poly/disjoint.tex
+++ b/Sources/Poly/disjoint.tex
@@ -12,8 +12,8 @@
 \end{figure}
 
 
-In this section we present the formal rules of disjointness. As show in
-\cref{fig:disjoint:fi}, the disjointness rules of \fnamee are directly inherited
+In this section we present the formal rules of disjointness, as show in
+\cref{fig:disjoint:fi}. The disjointness rules of \fnamee are directly inherited
 from \fname, which consists of two judgments.
 
 
