--- a/Sources/Traits/introduction.tex
+++ b/Sources/Traits/introduction.tex
@@ -1,8 +1,8 @@
 \section{Introduction}
 \label{sec:intro}
 
-Many dynamically typed-languages (including JavaScript~\cite{javascript}, Ruby~\cite{ruby}, Python~\cite{python}
-or Racket~\cite{racket}) support \emph{first-class classes}~\cite{DBLP:conf/aplas/FlattFF06}, or related concepts
+Many dynamically typed-languages (including JavaScript, Ruby, Python
+or Racket) support \emph{first-class classes}~\cite{DBLP:conf/aplas/FlattFF06}, or related concepts
 such as first-class mixins and/or traits. In those languages classes
 are first-class values and, like any other values, they can be
 passed as an argument, or returned from a function. Furthermore
