--- a/Sources/Traits/related.tex
+++ b/Sources/Traits/related.tex
@@ -3,8 +3,8 @@
 
 
 \paragraph{Typed First-Class Classes/Mixins/Traits.}
-First-class classes have been used in
-Racket~\cite{DBLP:conf/aplas/FlattFF06}, along with mixin support, and
+First-class~\cite{DBLP:conf/aplas/FlattFF06} classes have been used in
+Racket, along with mixin support, and
 have shown great practical value. For example, DrRacket
 IDE~\cite{DBLP:journals/jfp/FindlerCFFKSF02} makes extensive use of layered
 combinations of mixins to implement text editing features. The topic of
