--- a/Sources/Poly/elaboration.tex
+++ b/Sources/Poly/elaboration.tex
@@ -27,7 +27,7 @@ target expressions. The target calculus \tnamee is the standard call-by-value
 System F extended with products and coercions. The syntax of \tnamee is shown in
 \cref{fig:syntax:fco}. We naturally extend the type translation function $| \cdot |$
 to cover type variables and disjoint quantification as shown in \cref{def:type:translate:fi}.
-For disjoint quantification, we simply erase the disjointness constraint.
+For disjoint quantification, we simply erase the disjointness constraint and translate the body.
 
 \begin{definition}[Type translation from \fnamee to \tnamee] \label{def:type:translate:fi}
   \begin{align*}
