--- a/Sources/Polymorphism.tex
+++ b/Sources/Polymorphism.tex
@@ -3,6 +3,18 @@
 \chapter{Semantics of the \fnamee Calculus}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
+In this chapter, we are going to enrich \namee with parametric polymorphism. As
+we will see, the combination is very expressive, able to express sophisticated
+OOP concepts such as mixins and traits. The combination is also highly
+challenging in that coherence becomes even harder to prove than in the simply
+typed setting. We present \fnamee, the first typed calculus combining disjoint
+polymorphism with BCD subtyping. \fnamee is a variant of
+\citeauthor{leivant1991finitely}'s predicative System
+F~\citep{leivant1991finitely}. The choice of predicativity is due to the
+simplicity of the coherence proof. We will further discuss this in
+\cref{chap:coherence:poly}. \fnamee serves as the theoretical foundation of
+typed first-class traits, which will be introduced in \cref{chap:traits}.
+
 
 
 \input{Sources/Poly/overview.mng}
